codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_estimated_thread_cost_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"› Ask Codex to do anything                                                      "
"────────────────────────────────────────────────────────────────────────────────"
"  gpt-5.6-sol default · 5.2 credits · ~$0.21                                    "
